--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My git website</title>
+    <link rel="stylesheet " href="styles/blog.css"
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, nulla dicta in blanditiis quidem eligendi culpa officiis ipsa ratione suscipit ex perferendis esse. Vel delectus porro deleniti eligendi. Nesciunt, quisquam.</p>
+    </div>
 </body>
 </html>
