add second and third blog

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, nulla dicta in blanditiis quidem eligendi culpa officiis ipsa ratione suscipit ex perferendis esse. Vel delectus porro deleniti eligendi. Nesciunt, quisquam.</p>
     </div>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, nulla dicta in blanditiis quidem eligendi culpa officiis ipsa ratione suscipit ex perferendis esse. Vel delectus porro deleniti eligendi. Nesciunt, quisquam.</p>
+    </div>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, nulla dicta in blanditiis quidem eligendi culpa officiis ipsa ratione suscipit ex perferendis esse. Vel delectus porro deleniti eligendi. Nesciunt, quisquam.</p>
+    </div>
 </body>
 </html>
