add the listed element

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
         <h3>My first website</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, nulla dicta in blanditiis quidem eligendi culpa officiis ipsa ratione suscipit ex perferendis esse. Vel delectus porro deleniti eligendi. Nesciunt, quisquam.</p>
     </div>
+    <div>
+        <h3>how to push incremental code</h3>
+        <li>git add</li>
+        <li> git commit</li>
+        <li>git push</li>
+    </div>
 </body>
 </html>
